--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/tinker": "^2.7",
         "laravelcollective/html": "^6.4",
         "livewire/livewire": "^2.12",
+        "maatwebsite/excel": "^3.1",
         "spatie/laravel-permission": "^5.10",
         "yajra/laravel-datatables": "^10.0"
     },
